[package]
name = "hartex_utils"
version = "1.24.0"
edition = "2021"
description = """
The `hartex_utils` library provides several utilies for the HarTex Discord bot.
"""
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_core = { path = "../hartex_core" }
